# CUDA-ScaleDotProductAttention

./: CMakeLists.txt  README.md
docs/: FinalReport.md  ProjectProposal.md  WeeklyProgress1.md  WeeklyProgress2.md  WeeklyProgress3.md
scripts/: generate_qk.py  generate_random.py  verify.py  verify_qk.py
src/: inout.cu  main.cu  matmul.cu  softmax.cu  utils.cu
src/include/: inout.cuh  matmul.cuh  softmax.cuh  utils.cuh
tests/: test_matmul.cu
